dev-auth/dev-auth-service.yml
apiVersion: v1
kind: Service
metadata:
  name: dev-auth-service
spec:
  type: NodePort                  # Exposes service to your local machine via Node IP
  selector:
    app: dev-auth
  ports:
    - port: 8080                  # Service port inside cluster
      targetPort: 8080            # Port Spring Boot exposes
      nodePort: 30080             # Exposed on minikube IP
