dev-auth/dev-auth-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-auth-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: dev.local
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: dev-auth-service
                port:
                  number: 8080
